# husky

./: README.md
docker/: Dockerfile  docker-compose-gui-nvidia.yaml  docker-compose-gui.yaml  docker-compose.yaml
husky_description/urdf/: husky.urdf.xacro
husky_description/urdf/accessories/: flir_blackfly_mount.urdf.xacro
husky_gazebo/launch/: empty_world.launch  husky_lake.launch  husky_moon.launch  husky_playpen.launch  spawn_husky.launch
husky_gazebo/rviz/: ga_nav.rviz  husky.rviz  wild_nav.rviz
husky_navigation/: CMakeLists.txt  package.xml
husky_navigation/config/: costmap_common.yaml  costmap_common_params.yaml  costmap_global_static.yaml  costmap_local.yaml  move_base_params.yaml  planner.yaml
husky_navigation/launch/: move_base.launch  move_base_1.launch  view.launch
setup/: first_run.sh
